--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
